--- a/static/css/page3.css
+++ b/static/css/page3.css
@@ -1,13 +1,11 @@
-.class_box {
-  margin-top: 20px;
+.thead {
+  background-color: #6091ba;
+  color: #fff;
 }
-.fade-enter-active,.fade-leave-active{
-  transition: all .3s;
+.thead th {
+  text-align: center;
 }
 
-.fade-enter,.fade-leave-to{
-  opacity: 0;
-}
-.p-body{
-  overflow-y: hidden;
+.book_name {
+  color: #6091ba;
 }
