--- a/templates/page1.html
+++ b/templates/page1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cn">
   <head>
     <meta charset="UTF-8" />
-    <title>图书管理</title>
+    <title>图书分类</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/static/css/template.css" />
     <link rel="stylesheet" href="/static/css/page1.css" />
@@ -13,7 +13,7 @@
     <div class="header_top col-sm-12">
       <div class="col-md-1"></div>
       <div class="page-header title col-md-10">
-        <h1>Hello<small>这里是小韦的成绩管理系统</small></h1>
+        <h1>Hello<small>这里是xxx的图书管理系统</small></h1>
       </div>
       <div class="col-md-1"></div>
     </div>
@@ -22,13 +22,11 @@
       <div class="col-md-10 nav_main">
         <ul class="nav nav-pills">
           <li>
-            <a href="/"
-              ><span class="iconfont icon-shouye"></span>首页</a
-            >
+            <a href="/"><span class="iconfont icon-shouye"></span>首页</a>
           </li>
           <li class="active">
             <a href="/page1"
-              ><span class="iconfont icon-banji"></span>图书管理</a
+              ><span class="iconfont icon-banji"></span>图书分类</a
             >
           </li>
           <li>
@@ -37,19 +35,13 @@
             >
           </li>
           <li>
-            <a href="/page3"
-              ><span class="iconfont icon-bangzhu"></span>帮助</a
-            >
+            <a href="/page3"><span class="iconfont icon-bangzhu"></span>我的</a>
           </li>
           <li>
-            <a href="/page4"
-              ><span class="iconfont icon-signin"></span>登录</a
-            >
+            <a href="/page4"><span class="iconfont icon-signin"></span>登录</a>
           </li>
           <li>
-            <a href="/page5"
-              ><span class="iconfont icon-zhuce"></span>注册</a
-            >
+            <a href="/page5"><span class="iconfont icon-zhuce"></span>注册</a>
           </li>
         </ul>
       </div>
@@ -63,9 +55,9 @@
           style="border-bottom: 1px solid #eee; margin-bottom: 20px"
         >
           <div class="class_man item_text">
-            <h4 style="float: left; font-weight: 700">请选择班级:</h4>
+            <h4 style="float: left; font-weight: 700">图书分类</h4>
             <span style="float: right; margin-top: 20px"
-              >您在这里:<a href="index.html">首页</a>>图书管理</span
+              >您在这里:<a href="/">首页</a>>图书分类：</span
             >
           </div>
         </div>
@@ -73,9 +65,55 @@
       </div>
     </div>
 
+    <div class="classification col-md-10 col-md-offset-1">
+      <ol class="breadcrumb">
+        <li v-for="(item,index) in info.classification" @click="getValue(index)">
+          <a href="#">{{item}}</a>
+        </li>
+      </ol>
+      <table class="table table-hover table-bordered text-center table_body">
+        <thead>
+          <tr class="thead">
+            <th width="5%">编号</th>
+            <th>书名</th>
+            <th>作者</th>
+            <th>ISBN</th>
+            <th>出版社</th>
+            <th>图书总数</th>
+            <th>剩余图书</th>
+            <th>是否可借</th>
+            <th width="%4">借阅</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr v-for="(item,index) in info.book_arr">
+            <td>{{index+1}}</td>
+            <td id="tname">{{item.b_name}}</td>
+            <td>{{item.b_author}}</td>
+            <td>{{item.b_isbn}}</td>
+            <td>{{item.b_public}}</td>
+            <td>{{item.b_total}}</td>
+            <td>{{item.b_lave}}</td>
+
+            <td v-if="item.is_borrowable">可借</td>
+              <td v-else>不可借</td>
+            <td>
+              <button
+                class="btn btn-primary"
+                :class="item.is_borrowable?'':'disabled'"
+                style="padding-top: 2px; padding-bottom: 2px"
+                @click="borrow(item.b_id,item.is_borrowable)"
+              >
+                借阅
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/static/js/page1.js"></script>
-{% endverbatim myblock %}
+    {% endverbatim myblock %}
   </body>
 </html>
