--- a/templates/page3.html
+++ b/templates/page3.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cn">
   <head>
     <meta charset="UTF-8" />
-    <title>帮助</title>
+    <title>我的</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/static/css/template.css" />
     <link rel="stylesheet" href="/static/css/iconfont.css" />
     <link rel="stylesheet" href="/static/css/page3.css" />
   </head>
   <body>
-  {% verbatim myblock %}
+    {% verbatim myblock %}
     <div class="header_top col-md-12">
       <div class="col-md-1"></div>
       <div class="page-header title col-md-10">
-        <h1>Hello<small> 这里是小韦的成绩管理系统</small></h1>
+        <h1>Hello<small> 这里是xxx的图书管理系统</small></h1>
       </div>
       <div class="col-md-1"></div>
     </div>
@@ -22,34 +22,26 @@
       <div class="col-md-10 nav_main">
         <ul class="nav nav-pills">
           <li>
-            <a href="/"
-              ><span class="iconfont icon-shouye"></span>首页</a
-            >
+            <a href="/"><span class="iconfont icon-shouye"></span>首页</a>
           </li>
           <li>
             <a href="/page1"
-              ><span class="iconfont icon-banji"></span>班级管理</a
+              ><span class="iconfont icon-banji"></span>图书分类</a
             >
           </li>
           <li>
             <a href="/page2"
-              ><span class="iconfont icon-paiming1"></span>排名</a
+              ><span class="iconfont icon-paiming1"></span>搜索</a
             >
           </li>
           <li class="active">
-            <a href="/page3"
-              ><span class="iconfont icon-bangzhu"></span>帮助</a
-            >
+            <a href="/page3"><span class="iconfont icon-bangzhu"></span>我的</a>
           </li>
           <li>
-            <a href="/page4"
-              ><span class="iconfont icon-signin"></span>登录</a
-            >
+            <a href="/page4"><span class="iconfont icon-signin"></span>登录</a>
           </li>
           <li>
-            <a href="/page5"
-              ><span class="iconfont icon-zhuce"></span>注册</a
-            >
+            <a href="/page5"><span class="iconfont icon-zhuce"></span>注册</a>
           </li>
         </ul>
       </div>
@@ -63,15 +55,77 @@
         style="border-bottom: 1px solid #eee; margin-bottom: 20px"
       >
         <div class="class_man item_text">
-          <h4 style="float: left; font-weight: 700">常见问题:</h4>
-          <span style="float: right; margin-top: 20px"
-            >您在这里:<a href="index.html">首页</a>>帮助</span
+          <h4 style="float: left; font-weight: 700; margin-top: 30px">我的:</h4>
+          <span style="float: right; margin-top: 40px"
+            >您在这里:<a href="/">首页</a>>我的</span
           >
         </div>
       </div>
       <div class="col-md-1"></div>
     </div>
-   {% endverbatim myblock %}
+    <!-- 我的信息 -->
+    <div class="my_inf">
+      <div class="col-md-2 col-md-offset-5">
+        <h4>个人信息：</h4>
+        <table class="table table-hover table-bordered text-center table_body">
+          <tr>
+            <td>用户名:</td>
+            <td>{{user_inf.user_name}}</td>
+          </tr>
+          <tr>
+            <td>职位:</td>
+            <td>{{user_inf.user_title}}</td>
+          </tr>
+          <tr>
+            <td>总共可借阅图书数:</td>
+            <td>{{user_inf.user_total}}</td>
+          </tr>
+          <tr>
+            <td>已借阅图书数:</td>
+            <td>{{user_inf.user_borrow}}</td>
+          </tr>
+
+        </table>
+      </div>
+      <!-- 当前以借阅图书信息： -->
+      <div class="col-md-8 col-md-offset-2">
+        <h4>已借阅图书</h4>
+        <table class="table table-hover table-bordered text-center table_body">
+          <thead>
+            <tr class="thead">
+              <th width="10%">编号</th>
+              <th width="10%">书名</th>
+              <th width="10%">作者</th>
+              <th width="25%">借书时间</th>
+              <th width="25%">最晚归还日期</th>
+              <th width="10%">是否逾期</th>
+              <th width="10%">归还图书</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="tbody" v-for="(item,index) in borrowed_arr">
+              <td>{{index+1}}</td>
+              <td class="book_name">{{item.book_name}}</td>
+              <td>{{item.book_author}}</td>
+              <td>{{item.book_borrow}}</td>
+              <td>{{item.book_return}}</td>
+                <td v-if="!item.is_expected">未逾期</td>
+                <td v-else>已预期，请及时归还！</td>
+              <td>
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  @click="return_book(item.book_id)"
+                >
+                  归还
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    {% endverbatim myblock %}
   </body>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
