--- a/static/css/page3.css
+++ b/static/css/page3.css
@@ -1,6 +1,5 @@
 .thead {
-  background-color: #6091ba;
-  color: #fff;
+
 }
 .thead th {
   text-align: center;
@@ -8,4 +7,7 @@
 
 .book_name {
   color: #6091ba;
+}
+[v-cloak]{
+    display: none
 }
