--- a/static/css/page2.css
+++ b/static/css/page2.css
@@ -8,13 +8,21 @@
 .table_border{
     margin-top: 20px;
 }
-.thead{
-    background-color: #6091ba;
-    color: #fff;
-}
+
 #tname{
     color: #6091ba;
 }
 .class_box{
     margin-top: 20px;
+}
+.table_body tr td{
+    margin-bottom: 0;
+    margin-top: 0;
+}
+[v-cloak]{
+    display: none;
+}
+#Loading{
+
+    transform: translateY(300px);
 }
