--- a/static/css/page4.css
+++ b/static/css/page4.css
@@ -1,10 +1,4 @@
-.login_title {
-  color: #6091ba;
-  display: block;
-  text-align: center;
-  margin-top: 30px;
-  margin-bottom: 10px;
-}
+
 .input_login {
 }
 
@@ -23,3 +17,12 @@
 .class_box {
   margin-top: 20px;
 }
+
+#login{
+  margin-top: 10%;
+  margin-bottom: 17%;
+}
+        [v-cloak]{
+            display: none
+        }
+
