--- a/templates/page5.html
+++ b/templates/page5.html
@@ -60,7 +60,7 @@
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
-          <a href="#overview" class="mdl-layout__tab ">首页</a>
+          <a href="/" class="mdl-layout__tab ">首页</a>
           <a href="/page1" class="mdl-layout__tab">分类</a>
           <a href="/page2" class="mdl-layout__tab">搜索</a>
             <a href="/page3" class="mdl-layout__tab">我的</a>
